# ai-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance.md
.github/workflows/: automate-release.yml  build_release.yml  ci.yml  development.yml  release.yml  rust_validation.yml  sync-development.yml
docs/: BUILD_SYSTEM.md  MANUAL_TRIGGERS.md  VERSION_MANAGEMENT.md
docs/specs/: LARGE_DATASET_STREAMING_SPEC.md
src/: aggregation.rs  chunk_processor.rs  input_stream.rs  main.rs  spinner.rs  unit_tests.rs
tests/: integration_tests.rs
