[package]
name = "ai-cli"
version = "0.2.0"
edition = "2021"
description = "A command-line OpenAI-compatible API client for interacting with chat completion models"
authors = ["Brian Birrell"]
license = "MIT"

[package.metadata.deb]
section = "utils"
priority = "optional"
assets = [
  ["target/release/ai-cli", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/ai-cli/README.md", "644"],
]

[build-dependencies]
chrono = "0.4"

[dependencies]
tokio = { version = "1.47", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.56", features = ["derive", "cargo"] }
futures = "0.3"
anyhow = "1.0"
tempfile = "3.21"  # For testing
mockito = "1.7"   # For testing
tokio-stream = "0.1.17"
futures-util = "0.3.31"
dirs = "6.0"  # For finding configuration directory
toml = "0.9"  # For reading TOML config files
configparser = "3.0"  # Or use serpent if you prefer different config format
libc = "0.2"
# fs = "0.0.5"  # REMOVED: depended on bytes 0.4.x
log = "0.4"  # For structured logging
env_logger = "0.11"  # For logging implementation
indicatif = "0.17"  # For activity spinner
